Proyecto2/kubernetes/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto2
  labels:
    name: proyecto2
