Proyecto2/kubernetes/manifests/04-rust-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  selector:
    app: rust-api
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: localhost:5000/proyecto2/rust-api:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
