Proyecto2/kubernetes/manifests/grpc-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-rabbitmq
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-rabbitmq
  template:
    metadata:
      labels:
        app: grpc-rabbitmq
    spec:
      containers:
      - name: grpc-rabbitmq
        image: localhost:5000/proyecto2/go-api-grpc-server-rabbitmq:latest
        ports:
        - containerPort: 50051
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  namespace: proyecto2
spec:
  selector:
    app: grpc-rabbitmq
  ports:
  - port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-kafka
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-kafka
  template:
    metadata:
      labels:
        app: grpc-kafka
    spec:
      containers:
      - name: grpc-kafka
        image: localhost:5000/proyecto2/go-api-grpc-server-kafka:latest
        ports:
        - containerPort: 50052
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-kafka-service
  namespace: proyecto2
spec:
  selector:
    app: grpc-kafka
  ports:
  - port: 50052
    targetPort: 50052
