Proyecto2/kubernetes/manifests/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:latest
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: proyecto2
spec:
  selector:
    app: valkey
  ports:
  - port: 6379
    targetPort: 6379
