Proyecto2/kubernetes/manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: proyecto2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /input
spec:
  rules:
  - host: "weather.local"
    http:
      paths:
      - path: /input
        pathType: Prefix
        backend:
          service:
            name: rust-api
            port:
              number: 8000
